solved responsive bugs in about us page, when the page had missing images in mobile version and the peoples profiles did not align in columns in desktop version

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -521,6 +521,17 @@ article.review-container{
         min-width:600px;
         padding:10px 120px;
     }
+    .insidediv{
+        .maindiv{
+            flex-direction: row;
+            margin-left:200px;
+            margin-left:200px;
+            .uppgift{
+                width: 550px;
+            }
+        }
+
+    }
 }
 
 footer.classfooter{
@@ -540,7 +551,7 @@ footer.classfooter{
     }
 }
 
-  /* DEN HÄR DELEN AMIN HAR ARBETAT FÖR KONTAKT SIDA */
+  /* DEN HÄR DELEN AMIN HAR ARBETAT FÖR OM OSS SIDA */
 
   aside{
     box-sizing: border-box;
@@ -549,11 +560,15 @@ footer.classfooter{
     margin: 30px;
   }
   .insidediv{
-    margin-top: 150px;
+      display: flex;
+      flex-direction: column;
+        margin-top: 150px;
   }
  
   .maindiv{
     display: flex;
+    flex-direction: column;
+    align-items: center;
     flex-wrap: wrap;
     justify-content: center;
     margin: 20px;
@@ -617,7 +632,7 @@ footer.classfooter{
   .uppgift{
     font-size: 1.5rem;
     height: 250px;
-    width: 550px;
+    width: 100%;
     background-color: rgb(227, 231, 231);
     background-image: url("/img/man.png");
    
@@ -626,12 +641,12 @@ footer.classfooter{
 
   /* DEN HÄR DELEN AMIN HAR ARBETAT FÖR KONTAKT SIDA */
 
-  @media screen and (max-width: 700px){
-    .uppgift{
-      width: 100%;
-      padding: 0 4px;
-    }
-  }
+//   @media screen and (max-width: 700px){
+//     .uppgift{
+//       width: 100%;
+//       padding: 0 4px;
+//     }
+//   }
 
   .contact-form {
     display: flex;
